11-12-22 RestConLogin Security v0.2 Implementados roles de admin/usuario + funciones de login/logout